<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_main_activity3">MainActivity3</string>
    <string name="app_name">Gimbal</string>
    <string name="hello_world">Hello World!</string>
    <string name="MainDoor">Main Door</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Gimbal</string>
    <string name="Kitchen">Kitchen</string>
    <string name="Hall">Hall</string>
    <string name="Bedroom1">Bedroom 1</string>
    <string name="Bedroom2">Bedroom 2</string>
    <string name="Main_Door">MainDoor</string>
    <string name="Balcony">Balcony</string>
    <string name="Welcome">Welcome</string>
    <string name="Go">Go</string>
    <string name="Location">Location</string>
    <string name="destination_prompt">Choose a Place</string>

    <string-array name="destination">
        <item>Select Area</item>
        <item>Main Door</item>
        <item>Kitchen</item>
        <item>Bedroom 1</item>
        <item>Hall</item>
        <item>Bedroom 2</item>
        <item>Balcony</item>
    </string-array>

    <string name="title_activity_mainlast">MainActivity</string>

</resources>
