<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@drawable/buttonshape"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.test1.MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:text="@string/Welcome"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button1"
        style="@drawable/buttonshape"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="93dp"
        android:background="@drawable/buttonshape"
        android:text="@string/Go"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="25sp" />

    <Spinner
        android:id="@+id/spinner1"
        style="@android:style/Widget.DeviceDefault.Light.Spinner"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="67dp"
        android:entries="@array/destination"
        android:prompt="@string/destination_prompt"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/button2"
        style="@drawable/buttonshape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/button1"
        android:background="@drawable/buttonshape"
        android:text="@string/Location"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="25sp" />

</RelativeLayout>